--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dmego Home">
-    <meta name="keywords" content="Dmego,Homepage">
-    <meta name="author" content="Dmego">
+    <meta name="description" content="cloud player">
+    <meta name="keywords" content="云玩家,Homepage">
+    <meta name="author" content="云玩家">
     <title>Dmego Home</title>
     <link rel='stylesheet' type='text/css' href='https://cdn.webfont.youziku.com/webfonts/nomal/123918/33195/5d21f88af629d8080c5960eb.css' />
     <link rel="stylesheet" type="text/css" href="./assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/apple-touch-icon.png">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/favicon.ico">
 </head>
 
 <body>
@@ -23,12 +23,15 @@
         <i class="social iconfont icon-angleup btn-mobile-close__icon hidden"></i>
     </span>
     <header id="panel" class="panel-cover">
+        <script>
+            document.getElementById("panel").style = 'background: rgb(102, 102, 102) url("https://cdn.jsdelivr.net/gh/yunwanjia-cloud/blog/img/banner/' + Math.round(Math.random()*8) + '.jpg") no-repeat scroll center center / cover;
+        </script>
         <div class="panel-main">
             <div class="panel-main__inner panel-inverted">
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="./img/logo2.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/img/icon.png" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -38,7 +41,7 @@
                                     </h2>
                                     <p>
                                         
-                                            2019 · 努力
+                                            2020 · 努力
                                         
                                     </p>
                                 </div>
@@ -50,7 +53,7 @@
                         <img src="./img/logo2.jpg" width="80" alt="Dmego`s logo" class="js-avatar iUp show" />
                     </a> -->
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="Dmego Home">Dmego</a>
+                        <a href="#" title="cloudplayer Home">cloud player</a>
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
                     <hr class="panel-cover__divider iUp" />
@@ -63,16 +66,7 @@
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="/" class="blog-button">首页</a>
-                                    </li>
-                                    <li class="navigation__item">
-                                        <a href="https://dmego.me" class="blog-button" target="_blank">博客</a>
-                                    </li>
-                                    <li class="navigation__item">
-                                        <a href="https://r.dmego.me" class="blog-button" target="_blank">简历</a>
-                                    </li>
-                                    <li class="navigation__item">
-                                        <a href="https://dmego.me/about/" class="blog-button" target="_blank">关于</a>
+                                        <a href="https://blog.zplayer.cloud" class="blog-button" target="_blank">博客</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -81,26 +75,26 @@
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://github.com/dmego/" title="github" target="_blank">
+                                        <a href="https://github.com/yunwanjia-cloud/" title="github" target="_blank">
                                             <i class='social iconfont icon-github'></i>
-                                            <span class="label">github</span>
+                                            <span class="label">Github</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="http://www.cnblogs.com/dmego/" title="cnblogs" target="_blank">
+                                        <a href="http://www.cnblogs.com/cloud--/" title="cnblogs" target="_blank">
                                             <i class='social iconfont icon-cnblogs'></i>
                                             <span class="label">cnblogs</span>
                                         </a>
                                     </li>
 
                                     <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/dmego/" title="zhihu" target="_blank">
+                                        <a href="https://www.zhihu.com/people/yunwanjia/" title="zhihu" target="_blank">
                                             <i class='social iconfont icon-zhihu'></i>
                                             <span class="label">zhihu</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="mailto:dmeago@gmail.com" title="email">
+                                        <a href="mailto:371622558@qq.com" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
@@ -117,16 +111,16 @@
             <a class="icp" href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">XXX</a>
             <a class="gwab" href="http://www.beian.gov.cn/portal/recordQuery" target="_blank">XXX</a>
         </div> -->
-        <div class="remark iUp">
+        <!-- <div class="remark iUp">
             <p class="power">Powered By 
                 <a href="https://bird.ioliu.cn/" target="_blank"> JsonBird </a> And 
                 <a href="https://hitokoto.cn/" target="_blank"> Hitokoto </a>
             </p>
-        </div>
+        </div> -->
     </header>
-    <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="./assets/js/fetch.min.js"></script>
-    <script type="text/javascript" src="./assets/js/main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/js/fetch.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/js/main.js"></script>
 </body>
 
 </html>
