--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </span>
     <header id="panel" class="panel-cover">
         <script>
-            document.getElementById("panel").style = 'background: rgb(102, 102, 102) url("https://cdn.jsdelivr.net/gh/yunwanjia-cloud/blog/img/banner/' + Math.round(Math.random()*8) + '.jpg") no-repeat scroll center center / cover;
+            document.getElementById("panel").style = 'background: rgb(102, 102, 102) url("https://cdn.jsdelivr.net/gh/yunwanjia-cloud/blog/img/banner/' + Math.round(Math.random()*8) + '.jpg") no-repeat scroll center center / cover;'
         </script>
         <div class="panel-main">
             <div class="panel-main__inner panel-inverted">
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/img/icon.png" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/img/white_icon.png" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
