--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="cloud player">
+    <meta name="description" content="cloudplayer">
     <meta name="keywords" content="云玩家,Homepage">
     <meta name="author" content="云玩家">
-    <title>Dmego Home</title>
+    <title>Cloud Player</title>
     <link rel='stylesheet' type='text/css' href='https://cdn.webfont.youziku.com/webfonts/nomal/123918/33195/5d21f88af629d8080c5960eb.css' />
-    <link rel="stylesheet" type="text/css" href="./assets/css/vno.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/css/vno.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/apple-touch-icon.png">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/favicon.ico">
 </head>
@@ -23,9 +23,6 @@
         <i class="social iconfont icon-angleup btn-mobile-close__icon hidden"></i>
     </span>
     <header id="panel" class="panel-cover">
-        <script>
-            document.getElementById("panel").style = 'background: rgb(102, 102, 102) url("https://cdn.jsdelivr.net/gh/yunwanjia-cloud/blog/img/banner/' + Math.round(Math.random()*8) + '.jpg") no-repeat scroll center center / cover;'
-        </script>
         <div class="panel-main">
             <div class="panel-main__inner panel-inverted">
                 <div class="panel-main__content">
@@ -53,9 +50,9 @@
                         <img src="./img/logo2.jpg" width="80" alt="Dmego`s logo" class="js-avatar iUp show" />
                     </a> -->
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="cloudplayer Home">cloud player</a>
+                        <a href="#" title="cloudplayer Home">Cloud Player</a>
                     </h1>
-                    <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
+                    <p class="panel-cover__subtitle panel-subtitle iUp">Hello World</p>
                     <hr class="panel-cover__divider iUp" />
                     <p id="description" class="panel-cover__description iUp">如何得与凉风约，不共尘沙一并来!
                         <br/>
