--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <img src="./img/logo2.jpg" width="80" alt="Dmego`s logo" class="js-avatar iUp show" />
                     </a> -->
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="cloudplayer Home">Cloud Player</a>
+                        <a href="" title="cloudplayer Home">Cloud Player</a>
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Hello World</p>
                     <hr class="panel-cover__divider iUp" />
