--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/apple-touch-icon.png">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/favicon.ico">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/fa.ico">
 </head>
 
 <body>
