--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                                 <ul class="navigation">
                                     <li class="navigation__item">
                                         <a href="https://blog.zplayer.cloud" class="blog-button" target="_blank">博客</a>
+                                    </li>
+                                    <li class="navigation__item">
                                         <a href="https://nav.zplayer.cloud" class="blog-button" target="_blank">网址导航</a>
                                     </li>
                                 </ul>
