--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h1 class="panel-cover__title panel-title iUp">
                         <a href="#" title="cloudplayer Home">Cloud Player</a>
                     </h1>
-                    <p class="panel-cover__subtitle panel-subtitle iUp">Hello World</p>
+                    <p class="panel-cover__subtitle panel-subtitle iUp">尝试制造人工智障</p>
                     <hr class="panel-cover__divider iUp" />
                     <p id="description" class="panel-cover__description iUp">如何得与凉风约，不共尘沙一并来!
                         <br/>
