--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="cloudplayer">
-    <meta name="keywords" content="云玩家,Homepage">
-    <meta name="author" content="云玩家">
-    <title>Cloud Player</title>
+    <meta name="description" content="DylanLi">
+    <meta name="keywords" content="DylanLi,Homepage">
+    <meta name="author" content="DylanLi">
+    <title>Dylan Li</title>
     <link rel='stylesheet' type='text/css' href='https://cdn.webfont.youziku.com/webfonts/nomal/123918/33195/5d21f88af629d8080c5960eb.css' />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/css/vno.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/apple-touch-icon.png">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/fa.ico">
+    <link rel="stylesheet" type="text/css" href="./assets/css/vno.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/iconfont.css">
+    <link rel="apple-touch-icon" href="https://my-markdown-picbed.oss-cn-qingdao.aliyuncs.com/DylanBlog/apple-touch-icon.png">
+    <link rel="icon" href="https://my-markdown-picbed.oss-cn-qingdao.aliyuncs.com/DylanBlog/favicon.ico">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/img/white_icon.png" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://my-markdown-picbed.oss-cn-qingdao.aliyuncs.com/DylanBlog/logo2.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -50,9 +50,9 @@
                         <img src="./img/logo2.jpg" width="80" alt="Dmego`s logo" class="js-avatar iUp show" />
                     </a> -->
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="cloudplayer Home">Cloud Player</a>
+                        <a href="#" title="DylanLi's Home">Dyaln Li</a>
                     </h1>
-                    <p class="panel-cover__subtitle panel-subtitle iUp">尝试制造人工智障</p>
+                    <p class="panel-cover__subtitle panel-subtitle iUp">如果放弃太早，你永远都不知道自己会错过什么</p>
                     <hr class="panel-cover__divider iUp" />
                     <p id="description" class="panel-cover__description iUp">如何得与凉风约，不共尘沙一并来!
                         <br/>
@@ -62,12 +62,18 @@
                         <div>
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
+                                    <!-- <li class="navigation__item">
+                                        <a href="/" class="blog-button">首页</a>
+                                    </li> -->
                                     <li class="navigation__item">
-                                        <a href="https://blog.zplayer.cloud" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://cloudguest.cn/" class="blog-button" target="_blank">博客</a>
                                     </li>
-                                    <li class="navigation__item">
-                                        <a href="https://nav.zplayer.cloud" class="blog-button" target="_blank">网址导航</a>
-                                    </li>
+                                    <!-- <li class="navigation__item">
+                                        <a href="https://r.dmego.me" class="blog-button" target="_blank">简历</a>
+                                    </li> -->
+                                    <!-- <li class="navigation__item">
+                                        <a href="https://dmego.me/about/" class="blog-button" target="_blank">关于</a>
+                                    </li> -->
                                 </ul>
                             </nav>
                         </div>
@@ -75,26 +81,26 @@
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://github.com/yunwanjia-cloud/" title="github" target="_blank">
+                                        <a href="https://github.com/dylanllb" title="github" target="_blank">
                                             <i class='social iconfont icon-github'></i>
-                                            <span class="label">Github</span>
+                                            <span class="label">github</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="http://www.cnblogs.com/cloud--/" title="cnblogs" target="_blank">
+                                        <a href="https://www.cnblogs.com/CloudGuest/" title="cnblogs" target="_blank">
                                             <i class='social iconfont icon-cnblogs'></i>
                                             <span class="label">cnblogs</span>
                                         </a>
                                     </li>
 
                                     <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/yunwanjia/" title="zhihu" target="_blank">
+                                        <a href="https://www.zhihu.com/people/qiu-er-wen-dao" title="zhihu" target="_blank">
                                             <i class='social iconfont icon-zhihu'></i>
                                             <span class="label">zhihu</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="mailto:371622558@qq.com" title="email">
+                                        <a href="mailto:2637095895@qq.com@gmail.com" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
@@ -118,9 +124,9 @@
             </p>
         </div> -->
     </header>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/js/fetch.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yunwanjia-cloud/yunwanjia-cloud.github.io/assets/js/main.js"></script>
+    <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="./assets/js/fetch.min.js"></script>
+    <script type="text/javascript" src="./assets/js/main.js"></script>
 </body>
 
 </html>
