--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel='stylesheet' type='text/css' href='https://cdn.webfont.youziku.com/webfonts/nomal/123918/33195/5d21f88af629d8080c5960eb.css' />
     <link rel="stylesheet" type="text/css" href="./assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://my-markdown-picbed.oss-cn-qingdao.aliyuncs.com/DylanBlog/apple-touch-icon.png">
-    <link rel="icon" href="https://my-markdown-picbed.oss-cn-qingdao.aliyuncs.com/DylanBlog/favicon.ico">
+    <link rel="apple-touch-icon" href="https://my-markdown-picbed.oss-cn-qingdao.aliyuncs.com/DylanBlog/logo2.jpg">
+    <link rel="icon" href="https://my-markdown-picbed.oss-cn-qingdao.aliyuncs.com/DylanBlog/logo2.jpg">
 </head>
 
 <body>
