--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li> -->
                                     <li class="navigation__item">
-                                        <a href="www.cloudguest.cn/" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://www.cloudguest.cn/" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <!-- <li class="navigation__item">
                                         <a href="https://r.dmego.me" class="blog-button" target="_blank">简历</a>
